--- a/src/main/resources/templates/personalLoginPage.html
+++ b/src/main/resources/templates/personalLoginPage.html
@@ -2,19 +2,56 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Custom Login Page</title>
-    <style>
-        .failed {
-            color: red;
-        }
-    </style>
+    <meta charset="viewport" content="width=device-width, initial-scale=1">
+    <title>Login Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
 </head>
 <body>
     <div class="container">
-
+        <div id="loginbox" style="margin-top: 25%; margin-left: 35%;" class="col-md-3 col-md-offset-2 col-sm-6 col-sm-offset-2">
+            <div class="card border-info">
+                <div class="card-header bg-info">
+                    Sing In
+                </div>
+                <div class="card-body">
+                    <div class="card-text">
+                        <form action="#" th:action="@{/authenticateTheUser}" method="post" class="form-horizontal">
+                            <div class="form-group">
+                                <div class="col-xs-15">
+                                    <div th:if="${param.logout}">
+                                        <div class="alert alert-danger col-xs-offset-1 col-xs-10">
+                                            You have been logged out
+                                        </div>
+                                    </div>
+                                    <div th:if="${param.error}">
+                                        <div class="alert alert-danger col-xs-offset-1 col-xs-10">
+                                            Invalid username or password
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Username designe-->
+                            <div style="margin-bottom: 25xp;" class="input-group">
+                                <p>Username: <input type="text" name="username"></p>
+                            </div>
+                            <!-- Password designe-->
+                            <div style="margin-bottom: 25px;" class="input-group">
+                                <p>Password: <input type="password" name="password"></p>
+                            </div>
+                            <!-- Login button designe-->
+                            <div style="margin-top: 10px;" class="form-group">
+                                <div class="col-sm-6 controls">
+                                    <button type="submit" class="btn btn-success">Login</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-        <h3>Custom Login Page</h3>
+        <!--<h3>Custom Login Page</h3>
         <form action="#" th:action="@{/authenticateTheUser}" method="post">
             <p>Username: <input type="text" name="username">
                 <label th:if="${param.error}" class="failed">
@@ -27,6 +64,6 @@
                 </label>
             </p>
             <input type="submit" value="Login" name="loginBtn">
-        </form>
+        </form>-->
 </body>
 </html>
