--- a/src/main/resources/templates/personalLoginPage.html
+++ b/src/main/resources/templates/personalLoginPage.html
@@ -18,14 +18,18 @@
                         <form action="#" th:action="@{/authenticateTheUser}" method="post" class="form-horizontal">
                             <div class="form-group">
                                 <div class="col-xs-15">
-                                    <div th:if="${param.logout}">
-                                        <div class="alert alert-danger col-xs-offset-1 col-xs-10">
-                                            You have been logged out
-                                        </div>
-                                    </div>
+
+                                    <!-- Lee el parameto Error en la URL y una vez lo detecta hace esta operacion -->
                                     <div th:if="${param.error}">
                                         <div class="alert alert-danger col-xs-offset-1 col-xs-10">
                                             Invalid username or password
+                                        </div>
+                                    </div>
+                                    
+                                    <!-- Lee el parameto Logout en la URL y una vez lo detecta hace esta operacion -->
+                                    <div th:if="${param.logout}">
+                                        <div class="alert alert-success col-xs-offset-1 col-xs-10">
+                                            You have been logged out
                                         </div>
                                     </div>
                                 </div>
