--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org"
+                xmlns:sec="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
 </head>
 <body>
     <h2>Bienvenido a OPS 2 </h2>
+    <p>
+        <span sec:authentication="principal.username"></span>
+        <br><br>
+        Role(s): <span sec:authentication="principal.authorities"></span>  
+    </p>
+
+    <hr>
+
+    <p>
+        <a href="@{/leaders}">Manager Access</a>
+    </p>
+
+    <p>
+        <a href="@{/system}">Admin Access</a>
+    </p>
+
+    <hr>
+
     <form action="#" th:action="@{/logout}" method="POST">
         <input type="submit" value="logout">
     </form>
