--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -13,16 +13,23 @@
         Role(s): <span sec:authentication="principal.authorities"></span>  
     </p>
 
+    <span th:text="${clentes}"></span>
+
     <hr>
 
-    <p>
-        <a th:href="@{/leaders}">Manager Access</a>
-    </p>
+    <div sec:authorize="hasRole('MANAGER')">
+        <p>
+            <a th:href="@{/leaders}">Manager Access</a>
+        </p>    
+    </div>
+    
+    <div sec:authorize="hasRole('ADMIN')">
 
-    <p>
-        <a th:href="@{/system}">Admin Access</a>
-    </p>
-
+        <p>
+            <a th:href="@{/system}">Admin Access</a>
+        </p>
+    
+    </div>
     <hr>
 
     <form action="#" th:action="@{/logout}" method="POST">
