--- a/src/main/resources/templates/listPage.html
+++ b/src/main/resources/templates/listPage.html
@@ -1,13 +1,69 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org"
-                xmlns:sec="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org" xmlns:sec="http://thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 </head>
+
 <body>
     <h2>Lista de Clientes</h2>
-    <span th:text="${clientes}"></span>
+    <hr>
+
+    <div class="container">
+        <table class="table table-bordered table-striped">
+            <thead class="table-primary">
+                <tr>
+                    <th>First Name</th>
+                    <th>Second Name</th>
+                    <th>Email</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="tempClient : ${clientes}">
+                    <td th:text="${tempClient.firstName}"></td>
+                    <td th:text="${tempClient.secondName}"></td>
+                    <td th:text="${tempClient.email}"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="container text-center ">
+        <div class="row">
+            <div class="col"></div>
+            <div class="col-1">
+                <a th:href="@{/formAddClient}" class="btn btn-primary btn-sm mt-3 mb-3">Add Client</a>
+            </div>
+            <div class="col-1">
+                <a th:href="@{/formAddClient}" class="btn btn-primary btn-sm mt-3 mb-3">Add Client</a>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <label for="opciones">Selecciona una opción para navegar:</label>
+    <select id="opciones" onchange="redirigirUsuario(this.value)">
+        <!-- Opciones del dropdown -->
+        <option value="">Selecciona una opción</option>
+        <option th:value="@{/}">homePage</option>
+        <option value="https://www.ejemplo.com/opcion2">Opción 2</option>
+        <option value="https://www.ejemplo.com/opcion3">Opción 3</option>
+    </select>
+    <hr>
+
+    <script>
+        function redirigirUsuario(opcionSeleccionada) {
+            // Verifica si se ha seleccionado una opción válida
+            if (opcionSeleccionada !== "") {
+                // Redirige al usuario a la URL correspondiente a la opción seleccionada
+                window.location.href = opcionSeleccionada;
+            }
+        }
+    </script>
 </body>
+
 </html>
