--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org"
-                xmlns:sec="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org" xmlns:sec="http://thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
 <body>
-    <h2>Bienvenido a OPS 2 </h2>
-    <p>
-        <span sec:authentication="principal.username"></span>
-        <br><br>
-        Role(s): <span sec:authentication="principal.authorities"></span>  
-    </p>
-
-    <span th:text="${clientes}"></span>
-
-    <hr>
-
-    <div sec:authorize="hasRole('MANAGER')">
+    <div class="container m-3">
+        <h2>Bienvenido a la Pagina Principal</h2>
         <p>
-            <a th:href="@{/leaders}">Manager Access</a>
-        </p>    
-    </div>
-    
-    <div sec:authorize="hasRole('ADMIN')">
-
-        <p>
-            <a th:href="@{/list}">Admin Access</a>
+            <span sec:authentication="principal.username"></span>
+            <br><br>
+            Role(s): <span sec:authentication="principal.authorities"></span>
         </p>
-    
-    </div>
-    <hr>
 
-    <form action="#" th:action="@{/logout}" method="POST">
-        <input type="submit" value="logout">
-    </form>
+        <hr>
+
+        <div sec:authorize="hasRole('MANAGER')">
+            <a class="btn btn-info btn-sm m-1" th:href="@{/leaders}">Manager Access</a>
+        </div>
+
+        <div sec:authorize="hasRole('ADMIN')">
+            <p>
+                <a class="btn btn-info btn-sm m-1" th:href="@{/list}">Admin Access</a>
+            </p>
+        </div>
+        <hr>
+
+        <form action="#" th:action="@{/logout}" method="POST">
+            <input type="submit" value="logout">
+        </form>
+    </div>
+
 </body>
+
 </html>
