--- a/src/main/resources/templates/listPage.html
+++ b/src/main/resources/templates/listPage.html
@@ -30,7 +30,11 @@
                     <td th:text="${tempClient.secondName}"></td>
                     <td th:text="${tempClient.email}"></td>
                     <td>
+                        <!-- Button updating client -->
                         <a class="btn btn-info btn-sm mt-3 mb-3" th:href="@{/formUpdateClient(clientId=${tempClient.id})}">Update</a>
+                        <!-- Button deleting client -->
+                        <a class="btn btn-danger btn-sm mt-3 mb-3" th:href="@{/deleteClient(clientId=${tempClient.id})}"
+                            onclick="if(!(confirm('Seguro que quieres eliminar el usuario ${tempClient.firstName}?'))) return false">Delete</a>
                     </td>
                 </tr>
             </tbody>
