--- a/src/main/resources/templates/leadersPage.html
+++ b/src/main/resources/templates/leadersPage.html
@@ -28,6 +28,41 @@
         Role(s): <span sec:authentication="principal.authorities"></span>
     </p>
 
+    <div class="container">
+        <table class="table table-bordered table-striped">
+            <thead class="table-primary">
+                <tr>
+                    <th>First Name</th>
+                    <th>Second Name</th>
+                    <th>Email</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="tempClient : ${clientes}">
+                    <td th:text="${tempClient.firstName}"></td>
+                    <td th:text="${tempClient.secondName}"></td>
+                    <td th:text="${tempClient.email}"></td>
+                    <td>
+                        <!-- Button updating client -->
+                        <a class="btn btn-info btn-sm mt-3 mb-3" th:href="@{/formUpdateClient(clientId=${tempClient.id})}">Update</a>
+                        <!-- Button deleting client -->
+                        <a sec:authorize="hasRole('ADMIN')" class="btn btn-danger btn-sm mt-3 mb-3" th:href="@{/deleteClient(clientId=${tempClient.id})}"
+                            onclick="if(!(confirm('Seguro que quieres eliminar el usuario ${tempClient.firstName}?'))) return false">Delete</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="container text-center ">
+        <div class="row">
+            <div class="col"></div>
+            <div class="col-1">
+                <a th:href="@{/formAddClient}" class="btn btn-primary btn-sm mt-3 mb-3">Add Client</a>
+            </div>
+    </div>
+
     <hr>
     <label for="opciones">Selecciona una opción para navegar:</label>
     <select id="opciones" onchange="redirigirUsuario(this.value)">
