--- a/src/main/resources/templates/leadersPage.html
+++ b/src/main/resources/templates/leadersPage.html
@@ -43,12 +43,12 @@
                     <td th:text="${tempClient.firstName}"></td>
                     <td th:text="${tempClient.secondName}"></td>
                     <td th:text="${tempClient.email}"></td>
-                    <td>
+                    <td class="text-center">
                         <!-- Button updating client -->
                         <a class="btn btn-info btn-sm mt-3 mb-3" th:href="@{/formUpdateClient(clientId=${tempClient.id})}">Update</a>
                         <!-- Button deleting client -->
                         <a sec:authorize="hasRole('ADMIN')" class="btn btn-danger btn-sm mt-3 mb-3" th:href="@{/deleteClient(clientId=${tempClient.id})}"
-                            onclick="if(!(confirm('Seguro que quieres eliminar el usuario ${tempClient.firstName}?'))) return false">Delete</a>
+                            onclick="if(!(confirm('Seguro que quieres eliminar el usuario?'))) return false">Delete</a>
                     </td>
                 </tr>
             </tbody>
