--- a/src/main/resources/templates/listPage.html
+++ b/src/main/resources/templates/listPage.html
@@ -29,7 +29,7 @@
                     <td th:text="${tempClient.firstName}"></td>
                     <td th:text="${tempClient.secondName}"></td>
                     <td th:text="${tempClient.email}"></td>
-                    <td>
+                    <td class="text-center">
                         <!-- Button updating client -->
                         <a class="btn btn-info btn-sm mt-3 mb-3" th:href="@{/formUpdateClient(clientId=${tempClient.id})}">Update</a>
                         <!-- Button deleting client -->
