--- a/src/main/resources/templates/leadersPage.html
+++ b/src/main/resources/templates/leadersPage.html
@@ -27,10 +27,13 @@
         <br><br>
         Role(s): <span sec:authentication="principal.authorities"></span>
     </p>
-
+    <hr>
     <div class="container">
+        <div class="text-center">
+            <h2>Lista de Clientes</h2>
+        </div>
         <table class="table table-bordered table-striped">
-            <thead class="table-primary">
+            <thead class="table-primary text-center">
                 <tr>
                     <th>First Name</th>
                     <th>Second Name</th>
