--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -9,23 +9,23 @@
 </head>
 
 <body>
-    <div class="container m-3">
-        <h2>Bienvenido a la Pagina Principal</h2>
-        <p>
-            <span sec:authentication="principal.username"></span>
-            <br><br>
-            Role(s): <span sec:authentication="principal.authorities"></span>
-        </p>
+    <div class="container m-3 w-100">
+        <div class="row text-center">
+            <div class="col">
+                <h2>Bienvenido a la Pagina Principal</h2>
+            </div>
+            <div class="col-2">
+                <span sec:authentication="principal.username"></span>
+                <br><br>
+                Role(s): <span sec:authentication="principal.authorities"></span>
+            </div>
+        </div>
 
         <hr>
 
-        <p>
-            <a class="btn btn-info btn-sm m-1" th:href="@{/leaders}">Manager Access</a>
-        </p>
+        <p><a class="btn btn-info btn-sm m-1" th:href="@{/leaders}">Manager Access</a></p>
+        <p><a class="btn btn-info btn-sm m-1" th:href="@{/system}">Admin Access</a></p>
 
-        <p>
-            <a class="btn btn-info btn-sm m-1" th:href="@{/system}">Admin Access</a>
-        </p>
         <hr>
 
         <form action="#" th:action="@{/logout}" method="POST">
