--- a/src/main/resources/templates/listPage.html
+++ b/src/main/resources/templates/listPage.html
@@ -11,30 +11,30 @@
 </head>
 
 <body>
-    <h2>Lista de Clientes</h2>
+    <h2>Lista de Empleados</h2>
     <hr>
 
     <div class="container">
         <table class="table table-bordered table-striped">
-            <thead class="table-primary">
+            <thead class="table-primary text-center">
                 <tr>
-                    <th>First Name</th>
-                    <th>Second Name</th>
+                    <th>User ID</th>
+                    <th>Password</th>
                     <th>Email</th>
                     <th>Action</th>
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="tempClient : ${clientes}">
-                    <td th:text="${tempClient.firstName}"></td>
-                    <td th:text="${tempClient.secondName}"></td>
-                    <td th:text="${tempClient.email}"></td>
+                <tr th:each="tempEmployee : ${empleados}">
+                    <td th:text="${tempEmployee.username}"></td>
+                    <td th:text="${tempEmployee.password}"></td>
+                    <td th:text="${tempEmployee.email}"></td>
                     <td class="text-center">
                         <!-- Button updating client -->
-                        <a class="btn btn-info btn-sm mt-3 mb-3" th:href="@{/formUpdateClient(clientId=${tempClient.id})}">Update</a>
+                        <a class="btn btn-info btn-sm mt-3 mb-3" th:href="@{/formUpdateClient(clientId=${tempEmployee.username})}">Update</a>
                         <!-- Button deleting client -->
-                        <a class="btn btn-danger btn-sm mt-3 mb-3" th:href="@{/deleteClient(clientId=${tempClient.id})}"
-                            onclick="if(!(confirm('Seguro que quieres eliminar el usuario ${tempClient.firstName}?'))) return false">Delete</a>
+                        <a class="btn btn-danger btn-sm mt-3 mb-3" th:href="@{/deleteClient(clientId=${tempEmployee.username})}"
+                            onclick="if(!(confirm('Seguro que quieres eliminar el usuario ${tempEmployee.username}?'))) return false">Delete</a>
                     </td>
                 </tr>
             </tbody>
@@ -44,11 +44,8 @@
     <div class="container text-center ">
         <div class="row">
             <div class="col"></div>
-            <div class="col-1">
-                <a th:href="@{/formAddClient}" class="btn btn-primary btn-sm mt-3 mb-3">Add Client</a>
-            </div>
-            <div class="col-1">
-                <a th:href="@{/formAddClient}" class="btn btn-primary btn-sm mt-3 mb-3">Add Client</a>
+            <div class="col-2">
+                <a th:href="@{/formAddClient}" class="btn btn-primary btn-sm mb-3">Add Employee</a>
             </div>
         </div>
     </div>
