--- a/src/main/resources/templates/personalLoginPage.html
+++ b/src/main/resources/templates/personalLoginPage.html
@@ -36,11 +36,11 @@
                             </div>
                             <!-- Username designe-->
                             <div style="margin-bottom: 25xp;" class="input-group">
-                                <p>Username: <input type="text" name="username"></p>
+                                <p>Username: <input type="text" name="username" placeholder="User"></p>
                             </div>
                             <!-- Password designe-->
                             <div style="margin-bottom: 25px;" class="input-group">
-                                <p>Password: <input type="password" name="password"></p>
+                                <p>Password: <input type="password" name="password" placeholder="******"></p>
                             </div>
                             <!-- Login button designe-->
                             <div style="margin-top: 10px;" class="form-group">
