--- a/src/main/resources/templates/addClientForm.html
+++ b/src/main/resources/templates/addClientForm.html
@@ -21,7 +21,7 @@
 
             <button type="submit" class="btn btn-info col-2">Save</button>
         </form>
-        <a class="btn btn-warning col-2 mt-4" th:href="@{/list}">Back</a>
+        <a class="btn btn-warning col-2 mt-4" th:href="@{/leaderList}">Back</a>
     </div>
 </body>
 </html>
