--- a/src/main/resources/templates/accessDeniedPage.html
+++ b/src/main/resources/templates/accessDeniedPage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Denied Page</title>
 </head>
-<body>
+<body class="background RED">
     <h2>Accesso Denegado - Usted no cuenta con los permisos necesarios para acceder a esta pagina, contacte a su gerente o administrador</h2>
     
     <hr>
