--- a/src/main/resources/templates/leadersPage.html
+++ b/src/main/resources/templates/leadersPage.html
@@ -15,67 +15,93 @@
             padding: 8px;
             font-size: 16px;
         }
+        .fondo-rgb {
+            background-color: rgba(106, 4, 82, 0.336); /* Rojo puro (255, 0, 0) */
+            border-radius: 10px;
+        }
+    </style>
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-    <h2>Bienvenido a Leaders Page </h2>
-    <p>
-        <span sec:authentication="principal.username"></span>
-        <br><br>
-        Role(s): <span sec:authentication="principal.authorities"></span>
-    </p>
-    <hr>
-    <div class="container">
-        <div class="text-center">
-            <h2>Lista de Clientes</h2>
-        </div>
-        <table class="table table-bordered table-striped">
-            <thead class="table-primary text-center">
-                <tr>
-                    <th>First Name</th>
-                    <th>Second Name</th>
-                    <th>Email</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="tempClient : ${clientes}">
-                    <td th:text="${tempClient.firstName}"></td>
-                    <td th:text="${tempClient.secondName}"></td>
-                    <td th:text="${tempClient.email}"></td>
-                    <td class="text-center">
-                        <!-- Button updating client -->
-                        <a class="btn btn-info btn-sm mt-3 mb-3" th:href="@{/formUpdateClient(clientId=${tempClient.id})}">Update</a>
-                        <!-- Button deleting client -->
-                        <a sec:authorize="hasRole('ADMIN')" class="btn btn-danger btn-sm mt-3 mb-3" th:href="@{/deleteClient(clientId=${tempClient.id})}"
-                            onclick="if(!(confirm('Seguro que quieres eliminar el usuario?'))) return false">Delete</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-    <div class="container text-center ">
-        <div class="row">
-            <div class="col"></div>
-            <div class="col-1">
-                <a th:href="@{/formAddClient}" class="btn btn-primary btn-sm mt-3 mb-3">Add Client</a>
+    <div class="container m-3 ml-3 w-100">
+        <div class="row text-center mt-2">
+            <div class="col-8 bg-success-subtle border border-warning-subtle rounded-3">
+                <h2 class="mt-2">Clients Page</h2>
             </div>
+            <div class="col-4">
+                <div class="row justify-content-md-center">
+                    <div class="col-md-auto">
+                        <span class="input-group-text" id="basic-addon1" width="50px">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"></path>
+                                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"></path>
+                            </svg>
+                        </span>
+                    </div>
+                    <div class="col-md-auto">
+                        <span sec:authentication="principal.username"></span>
+                    </div>
+                </div>
+                Role(s): <span class="text-primary" sec:authentication="principal.authorities"></span>
+            </div>
+        </div>
+        <hr>
+        <div class="container fondo-rgb">
+            <div class="text-center">
+                <h2 class="mt-2 mb-2">Lista de Clientes</h2>
+            </div>
+            <table class="table table-bordered table-striped">
+                <thead class="table-primary text-center">
+                    <tr>
+                        <th>First Name</th>
+                        <th>Second Name</th>
+                        <th>Email</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="tempClient : ${clientes}">
+                        <td th:text="${tempClient.firstName}"></td>
+                        <td th:text="${tempClient.secondName}"></td>
+                        <td th:text="${tempClient.email}"></td>
+                        <td class="text-center">
+                            <!-- Button updating client -->
+                            <a class="btn btn-info btn-sm mt-3 mb-3" th:href="@{/formUpdateClient(clientId=${tempClient.id})}">Update</a>
+                             <!-- Button info client -->
+                             <a class="btn btn-warning btn-sm mt-3 mb-3" th:href="@{/formInfoClient(clientId=${tempClient.id})}">Info</a>
+                            <!-- Button deleting client -->
+                            <a sec:authorize="hasRole('ADMIN')" class="btn btn-danger btn-sm mt-3 mb-3" th:href="@{/deleteClient(clientId=${tempClient.id})}"
+                                onclick="if(!(confirm('Seguro que quieres eliminar el usuario?'))) return false">Delete</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="row">
+                <div class="col"></div>
+                <div class="col-1">
+                    <a th:href="@{/formAddClient}" class="btn btn-primary btn-sm mt-3 mb-3">Add Client</a>
+                </div>
+            </div>
+        </div>
+    
+        <hr>
+        <label for="opciones">Selecciona una opción para navegar:</label>
+        <select id="opciones" onchange="redirigirUsuario(this.value)">
+            <!-- Opciones del dropdown -->
+            <option value="">Selecciona una opción</option>
+            <option th:value="@{/}">OPS</option>
+            <option value="https://www.ejemplo.com/opcion2">Opción 2</option>
+            <option value="https://www.ejemplo.com/opcion3">Opción 3</option>
+        </select>
+        <hr>
+        
+        <form action="#" th:action="@{/logout}" method="POST">
+            <input type="submit" value="logout">
+        </form>
     </div>
-
-    <hr>
-    <label for="opciones">Selecciona una opción para navegar:</label>
-    <select id="opciones" onchange="redirigirUsuario(this.value)">
-        <!-- Opciones del dropdown -->
-        <option value="">Selecciona una opción</option>
-        <option th:value="@{/}">OPS</option>
-        <option value="https://www.ejemplo.com/opcion2">Opción 2</option>
-        <option value="https://www.ejemplo.com/opcion3">Opción 3</option>
-    </select>
-    <hr>
 
 
     <script>
@@ -87,10 +113,6 @@
             }
         }
     </script>
-
-    <form action="#" th:action="@{/logout}" method="POST">
-        <input type="submit" value="logout">
-    </form>
 </body>
 
 </html>
