--- a/src/main/resources/templates/listPage.html
+++ b/src/main/resources/templates/listPage.html
@@ -7,7 +7,29 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
+        <style>
+            /* Estilos opcionales para mejorar la apariencia del dropdown */
+            body {
+                font-family: Arial, sans-serif;
+                margin: 20px;
+            }
+    
+            select {
+                padding: 8px;
+                font-size: 16px;
+            }
+            .fondo-rgb {
+                background-color: rgba(106, 4, 82, 0.336); /* Rojo puro (255, 0, 0) */
+                border-radius: 10px;
+            }
+            .bradius{
+                border-radius: 10px;
+            }
+            .bground-general{
+                background-color: rgba(18, 194, 243, 0.255);
+                border-radius: 10px;
+            }
+        </style>
 </head>
 
 <body>
