--- a/src/main/resources/templates/personalLoginPage.html
+++ b/src/main/resources/templates/personalLoginPage.html
@@ -5,50 +5,79 @@
     <meta charset="viewport" content="width=device-width, initial-scale=1">
     <title>Login Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <style>
+        body {
+            background-image: url("https://images.hdqwalls.com/download/san-francisco-minimalist-city-jx-1024x768.jpg");
+            background-position: center;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <div id="loginbox" style="margin-top: 25%; margin-left: 35%;" class="col-md-3 col-md-offset-2 col-sm-6 col-sm-offset-2">
-            <div class="card border-info">
-                <div class="card-header bg-info">
-                    Sing In
+        <div class="container">
+            <div class="col-8">
+                <div class="clearfix" style="margin-top: 25%; margin-left: 60%;">
+                    <img src="https://static.vecteezy.com/system/resources/thumbnails/015/214/757/small/bank-3d-illustration-icon-png.png"
+                        class="col mb-3 ms-md-3 rounded-circle" alt="..." width="150px" height="150px">
                 </div>
-                <div class="card-body">
-                    <div class="card-text">
-                        <form action="#" th:action="@{/authenticateTheUser}" method="post" class="form-horizontal">
-                            <div class="form-group">
-                                <div class="col-xs-15">
-
-                                    <!-- Lee el parameto Error en la URL y una vez lo detecta hace esta operacion -->
-                                    <div th:if="${param.error}">
-                                        <div class="alert alert-danger col-xs-offset-1 col-xs-10">
-                                            Invalid username or password
+            </div>
+        </div>
+        <div class="container mb-4">
+            <div id="loginbox" style="margin-left: 35%;" class="col-md-3 col-md-offset-2 col-sm-6 col-sm-offset-2">
+                <div class="card border-info">
+                    <div class="card-header bg-info">
+                        <div class="row">
+                            <div class="col"></div>
+                            <div class="col-md-auto">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-shield-lock" viewBox="0 0 16 16">
+                                    <path d="M5.338 1.59a61 61 0 0 0-2.837.856.48.48 0 0 0-.328.39c-.554 4.157.726 7.19 2.253 9.188a10.7 10.7 0 0 0 2.287 2.233c.346.244.652.42.893.533q.18.085.293.118a1 1 0 0 0 .101.025 1 1 0 0 0 .1-.025q.114-.034.294-.118c.24-.113.547-.29.893-.533a10.7 10.7 0 0 0 2.287-2.233c1.527-1.997 2.807-5.031 2.253-9.188a.48.48 0 0 0-.328-.39c-.651-.213-1.75-.56-2.837-.855C9.552 1.29 8.531 1.067 8 1.067c-.53 0-1.552.223-2.662.524zM5.072.56C6.157.265 7.31 0 8 0s1.843.265 2.928.56c1.11.3 2.229.655 2.887.87a1.54 1.54 0 0 1 1.044 1.262c.596 4.477-.787 7.795-2.465 9.99a11.8 11.8 0 0 1-2.517 2.453 7 7 0 0 1-1.048.625c-.28.132-.581.24-.829.24s-.548-.108-.829-.24a7 7 0 0 1-1.048-.625 11.8 11.8 0 0 1-2.517-2.453C1.928 10.487.545 7.169 1.141 2.692A1.54 1.54 0 0 1 2.185 1.43 63 63 0 0 1 5.072.56"/>
+                                    <path d="M9.5 6.5a1.5 1.5 0 0 1-1 1.415l.385 1.99a.5.5 0 0 1-.491.595h-.788a.5.5 0 0 1-.49-.595l.384-1.99a1.5 1.5 0 1 1 2-1.415"/>
+                                  </svg>
+                                Sing In
+                            </div>
+                            <div class="col"></div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-text">
+                            <form action="#" th:action="@{/authenticateTheUser}" method="post" class="form-horizontal">
+                                <div class="form-group">
+                                    <div class="col-xs-15">
+    
+                                        <!-- Lee el parameto Error en la URL y una vez lo detecta hace esta operacion -->
+                                        <div th:if="${param.error}">
+                                            <div class="alert alert-danger col-xs-offset-1 col-xs-10">
+                                                Invalid username or password
+                                            </div>
                                         </div>
-                                    </div>
-                                    
-                                    <!-- Lee el parameto Logout en la URL y una vez lo detecta hace esta operacion -->
-                                    <div th:if="${param.logout}">
-                                        <div class="alert alert-success col-xs-offset-1 col-xs-10">
-                                            You have been logged out
+                                        
+                                        <!-- Lee el parameto Logout en la URL y una vez lo detecta hace esta operacion -->
+                                        <div th:if="${param.logout}">
+                                            <div class="alert alert-success col-xs-offset-1 col-xs-10">
+                                                You have been logged out
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <!-- Username designe-->
-                            <div style="margin-bottom: 25xp;" class="input-group">
-                                <p>Username: <input type="text" name="username" placeholder="User"></p>
-                            </div>
-                            <!-- Password designe-->
-                            <div style="margin-bottom: 25px;" class="input-group">
-                                <p>Password: <input type="password" name="password" placeholder="******"></p>
-                            </div>
-                            <!-- Login button designe-->
-                            <div style="margin-top: 10px;" class="form-group">
-                                <div class="col-sm-6 controls">
-                                    <button type="submit" class="btn btn-success">Login</button>
+                                <!-- Username designe-->
+                                <div style="margin-bottom: 25xp;" class="input-group">
+                                    <p>Username: <input type="text" name="username" placeholder="User"></p>
                                 </div>
-                            </div>
-                        </form>
+                                <!-- Password designe-->
+                                <div style="margin-bottom: 25px;" class="input-group">
+                                    <p>Password: <input type="password" name="password" placeholder="******"></p>
+                                </div>
+                                <!-- Login button designe-->
+                                <div style="margin-top: 10px;" class="row form-group">
+                                    <div class="col"></div>
+                                    <div class="col">
+                                        <button type="submit" class="btn btn-success">Login</button>
+                                    </div>
+                                    <div class="col">
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
