--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -53,10 +53,10 @@
 
 <body>
     <div class="container bground-general">
-        <div class="container m-3 ml-3 w-100">
+        <div class="container">
             <div class="container">
                 <div class="row"></div>
-                <div class="row text-center mt-2">
+                <div class="row text-center mt-3">
                     <div class="col-8 bg-primary-subtle border border-primary-subtle rounded-3">
                         <h2 class="mt-3"> Bank Main Page </h2>
                     </div>
